# quant-trading-system

./: Cargo.toml  LICENSE  Makefile  README.md  README.tpl
benches/: amm_bench.rs  concurrency_bench.rs  ingestion_bench.rs  orderbook_bench.rs
coverage/: tarpaulin-report.html  tarpaulin-report.json
data/: LOB_delta.json  LOB_snapshot.json  LOB_trades.json  amm_pool.json
doc/: developer-guide.md
examples/: arbitrage_bot.rs  basic_usage.rs  data_replay.rs  market_maker.rs
src/: lib.rs  main.rs
src/domain/: amm_pool.rs  arbitrage.rs  events.rs  market_data.rs  mod.rs  order_book.rs  types.rs
src/infrastructure/: mod.rs
src/infrastructure/ingestion/: mod.rs  stream_ingester.rs
src/infrastructure/metrics/: collector.rs  exporter.rs  mod.rs
src/infrastructure/parsers/: json_parser.rs  mod.rs
src/utils/: logger.rs  mod.rs
tests/: amm_tests.rs  arbitrage_tests.rs  concurrency_tests.rs  integration_tests.rs  orderbook_tests.rs
